# cargo-shear

./: .clippy.toml  .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  release-plz.toml
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: ci.yml  copilot-setup-steps.yml  release-binaries.yml  release-plz.yml  release.yml  zizmor.yml
src/: cargo_toml_editor.rs  context.rs  dependency_analyzer.rs  diagnostic.rs  diagnostics.rs  error.rs  file_collector.rs  import_collector.rs  lib.rs  main.rs  manifest.rs  output.rs  package_analyzer.rs  package_processor.rs  registry.rs  source_parser.rs  tests.rs  tree.rs  util.rs
src/output/: github.rs  json.rs  miette.rs
tests/: integration_tests.rs
tests/fixtures/all_deps_used/: Cargo.toml
tests/fixtures/all_deps_used/src/: main.rs
tests/fixtures/clean/: Cargo.toml
tests/fixtures/clean_workspace/: Cargo.toml
tests/fixtures/clean_workspace/app/: Cargo.toml
tests/fixtures/clean_workspace/app/src/: lib.rs
tests/fixtures/clean_workspace/lib/: Cargo.toml
tests/fixtures/clean_workspace/lib/src/: lib.rs
tests/fixtures/complex/: Cargo.toml
tests/fixtures/complex/tests/: test.rs
tests/fixtures/complex_workspace/: Cargo.toml
tests/fixtures/complex_workspace/api/: Cargo.toml
tests/fixtures/complex_workspace/api/src/: main.rs
tests/fixtures/complex_workspace/core/: Cargo.toml
tests/fixtures/complex_workspace/core/src/: lib.rs
tests/fixtures/complex_workspace/tools/: Cargo.toml
tests/fixtures/complex_workspace/tools/src/: main.rs
tests/fixtures/doctest_disabled_with_doctests/: Cargo.toml
tests/fixtures/doctest_disabled_with_doctests/src/: lib.rs
tests/fixtures/empty_files/: Cargo.toml
tests/fixtures/empty_files/src/: comments.rs  lib.rs  whitespace.rs
tests/fixtures/empty_ignored/: Cargo.toml
tests/fixtures/empty_ignored/src/: doc_only.rs  lib.rs
tests/fixtures/expand_cfg_test/: Cargo.toml
tests/fixtures/expand_cfg_test/src/: lib.rs
tests/fixtures/expand_dev_macro/: Cargo.toml
tests/fixtures/expand_hint/: Cargo.toml
tests/fixtures/expand_hint/src/: lib.rs
tests/fixtures/expand_hint/src/expand/: helper.rs  mod.rs
tests/fixtures/filter_workspace/: Cargo.toml
tests/fixtures/filter_workspace/app/: Cargo.toml
tests/fixtures/filter_workspace/lib/: Cargo.toml
tests/fixtures/filter_workspace/lib/src/: lib.rs
tests/fixtures/hakari/: Cargo.toml
tests/fixtures/hakari/app/: Cargo.toml
tests/fixtures/hakari/workspace-hack/: Cargo.toml
tests/fixtures/ignored/: Cargo.toml
tests/fixtures/ignored_artifact/crates/my_app/: Cargo.toml
tests/fixtures/ignored_invalid/: Cargo.toml
tests/fixtures/ignored_package_workspace_dep/: Cargo.toml
tests/fixtures/ignored_package_workspace_dep/app/: Cargo.toml
tests/fixtures/ignored_package_workspace_dep/lib/: Cargo.toml
tests/fixtures/ignored_redundant/: Cargo.toml
tests/fixtures/ignored_workspace/: Cargo.toml
tests/fixtures/ignored_workspace_dev_dep/: Cargo.toml
tests/fixtures/ignored_workspace_dev_dep/app/: Cargo.toml
tests/fixtures/ignored_workspace_dev_dep/lib/: Cargo.toml
tests/fixtures/ignored_workspace_merged/: Cargo.toml
tests/fixtures/ignored_workspace_merged/lib/: Cargo.toml
tests/fixtures/ignored_workspace_redundant/: Cargo.toml
tests/fixtures/invalid_ignored/: Cargo.toml
tests/fixtures/invalid_ignored/src/: main.rs
tests/fixtures/invalid_ignored_workspace/: Cargo.toml
tests/fixtures/invalid_ignored_workspace/app/: Cargo.toml
tests/fixtures/misplaced/: Cargo.toml
tests/fixtures/misplaced_ignored/: Cargo.toml
tests/fixtures/misplaced_ignored/tests/: test.rs
tests/fixtures/misplaced_optional/: Cargo.toml
tests/fixtures/misplaced_platform/: Cargo.toml
tests/fixtures/misplaced_renamed/: Cargo.toml
tests/fixtures/misplaced_renamed/src/: lib.rs
tests/fixtures/misplaced_renamed/tests/: test.rs
tests/fixtures/misplaced_table/: Cargo.toml
tests/fixtures/misplaced_unit/: Cargo.toml
tests/fixtures/misplaced_unit/src/: lib.rs
tests/fixtures/serde_attribute/: Cargo.toml
tests/fixtures/serde_attribute/src/: lib.rs
tests/fixtures/serde_attribute_macro/: Cargo.toml
tests/fixtures/serde_attribute_macro/src/: lib.rs
tests/fixtures/serde_attribute_macro/tests/: test.rs
tests/fixtures/simple_unused_deps/: Cargo.toml
tests/fixtures/simple_unused_deps/src/: main.rs
tests/fixtures/test_disabled_with_tests/: Cargo.toml
tests/fixtures/test_enabled_without_tests_workspace_ignored_workspace/: Cargo.toml
tests/fixtures/unlinked_ignored/: Cargo.toml
tests/fixtures/unlinked_ignored_redundant/: Cargo.toml
tests/fixtures/unlinked_ignored_workspace/: Cargo.toml
tests/fixtures/unlinked_ignored_workspace/lib/: Cargo.toml
tests/fixtures/unlinked_workspace_ignored_redundant/: Cargo.toml
tests/fixtures/unused/: Cargo.toml
tests/fixtures/unused_build/: Cargo.toml
tests/fixtures/unused_dev/: Cargo.toml
tests/fixtures/unused_empty_feature/: Cargo.toml
tests/fixtures/unused_feature/: Cargo.toml
tests/fixtures/unused_feature_weak/: Cargo.toml
tests/fixtures/unused_libname/: Cargo.toml
tests/fixtures/unused_naming_hyphen/: Cargo.toml
tests/fixtures/unused_naming_underscore/: Cargo.toml
tests/fixtures/unused_optional/: Cargo.toml
tests/fixtures/unused_optional_implicit/: Cargo.toml
tests/fixtures/unused_platform/: Cargo.toml
tests/fixtures/unused_renamed/: Cargo.toml
tests/fixtures/unused_table/: Cargo.toml
tests/fixtures/unused_workspace/: Cargo.toml
tests/fixtures/unused_workspace_libname/: Cargo.toml
tests/fixtures/unused_workspace_libname/app/: Cargo.toml
tests/fixtures/unused_workspace_path/: Cargo.toml
tests/fixtures/unused_workspace_path/new-crate/: Cargo.toml
tests/fixtures/unused_workspace_path_kept/: Cargo.toml
tests/fixtures/unused_workspace_renamed/: Cargo.toml
tests/fixtures/unused_workspace_renamed/app/: Cargo.toml
tests/fixtures/workspace_unused_deps/: Cargo.toml
tests/fixtures/workspace_unused_deps/app/: Cargo.toml
tests/fixtures/workspace_unused_deps/lib/: Cargo.toml
(+13 files in other folders)
