[package]
name = "cargo-shear"
version = "1.1.4"
edition = "2021"
description = "Detect and remove unused dependencies from Cargo.toml"
authors = ["Boshen <boshenc@gmail.com>"]
repository = "https://github.com/Boshen/cargo-shear"
keywords = ["cargo", "udeps", "machete", "unused", "dependencies"]
categories = ["development-tools", "development-tools::cargo-plugins"]
license = "MIT"
readme = "README.md"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
dbg_macro = "warn"
unwrap_used = "warn"
empty_drop = "warn"
exit = "warn"
empty_structs_with_brackets = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
same_name_method = "warn"

[lib]
doctest = false

[[bin]]
name = "cargo-shear"
path = "src/main.rs"
test = false

[dependencies]
walkdir = "2.5.0"
cargo_metadata = "0.19.1"
cargo_toml = "0.21.0"
bpaf = { version = "0.9.15", features = ["derive", "batteries"] }
proc-macro2 = { version = "1.0.92", features = ["span-locations"] }
syn = { version = "2.0.90", features = [
  "full",
  "visit",
  "extra-traits", # add "extra-traits" to debug syn ast
] }
regex = "1.11.1"
rayon = "1.10.0"
toml_edit = { version = "0.22.22", features = ["parse"] }
anyhow = "1.0.94"
cargo-util-schemas = "0.7.0"
serde_json = "1.0.133"

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"   # Let it crash and force ourselves to write safe Rust.
