[package]
name = "simple-unused-deps"
version = "0.1.0"
edition = "2021"

[dependencies]
# This dependency is used
serde = "1.0"
# This dependency is not used and should be detected as unused
regex = "1.0"
# This dependency is also not used
clap = "4.0"

[dev-dependencies]
# This dev dependency is not used
tokio = "1.0"
